--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -148,6 +148,33 @@ jobs:
 
           echo "User data script completed successfully" | tee -a $LOG_FILE
 
+          EOF
+
+          sed -i "s|\${DEPLOYMENT_BUCKET}|${{ env.DEPLOYMENT_BUCKET }}|g" user-data.sh
+          sed -i "s|\${DEPLOYMENT_TAG}|${TAG}|g" user-data.sh
+          sed -i "s|\${AWS_REGION}|${{ env.AWS_REGION }}|g" user-data.sh
+          sed -i "s|\${DOCKER_USERNAME}|${{ secrets.DOCKER_USERNAME }}|g" user-data.sh
+          sed -i "s|\${DOCKER_PASSWORD}|${{ secrets.DOCKER_PASSWORD }}|g" user-data.sh
+
+          NEW_VERSION=$(aws ec2 create-launch-template-version \
+            --launch-template-id ${{ env.LAUNCH_TEMPLATE_ID }} \
+            --source-version '$Latest' \
+            --launch-template-data "{
+              \"UserData\": \"$(base64 -w 0 user-data.sh)\",
+              \"TagSpecifications\": [{
+                \"ResourceType\": \"instance\",
+                \"Tags\": [
+                  {\"Key\": \"Name\", \"Value\": \"quotes-app-green\"},
+                  {\"Key\": \"Environment\", \"Value\": \"green\"},
+                  {\"Key\": \"DeploymentBatch\", \"Value\": \"${TAG}\"}
+                ]
+              }]
+            }" \
+            --query 'LaunchTemplateVersion.VersionNumber' \
+            --output text)
+
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "✅ Created Launch Template version: $NEW_VERSION"
 
   create-new-infrastructure:
     needs: build
