--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -118,7 +118,7 @@ jobs:
           sudo systemctl start nginx
 
           echo "Installing AWS SSM agent..." | tee -a $LOG_FILE
-          curl "https://s3.${AWS_REGION}.amazonaws.com/amazon-ssm-${AWS_REGION}/latest/debian_amd64/amazon-ssm-agent.deb" -o amazon-ssm-agent.deb >> $LOG_FILE 2>&1
+          wget https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/debian_amd64/amazon-ssm-agent.deb
           sudo dpkg -i amazon-ssm-agent.deb >> $LOG_FILE 2>&1 || true
           sudo systemctl enable amazon-ssm-agent
           sudo systemctl start amazon-ssm-agent
